基本完成全球疫情模块的布局